Fixed overflow

--- a/url.css
+++ b/url.css
@@ -19,11 +19,17 @@ h3{
 
 h4 {
     font-size: large;
-    color: white;
+    text-align: center;
+    width: 340px;
 }
 
 a{
     color: rgb(56, 56, 236);
+}
+
+#longurl{
+    width: 340px;
+    overflow-wrap: break-word;
 }
 
 .header {
